--- a/_includes/page-nav.html
+++ b/_includes/page-nav.html
@@ -2,7 +2,7 @@
     <section id="page-nav">
         <div id="pagenav-group" class="list-group position-fixed">
         {% for p in page.headers %}
-            <a class="list-group-item list-group-item-action" href="#{{ p[0] }}">{{ p[1] }}</a>
+            <a class="list-group-item list-group-item-action" href="{{ p[0] }}">{{ p[1] }}</a>
         {% endfor %}
         </div>
     </section>
