--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -40,3 +40,9 @@
 
   </div>
 </footer>
+
+{% include footer/_scripts.html %}
+{% include dev/_development-scripts.html %}<!-- todo: remove on production -->
+
+</body>
+</html>
