--- a/_includes/dev/_breakpoints.html
+++ b/_includes/dev/_breakpoints.html
@@ -1,5 +1,5 @@
-<div class="text-white d-block d-sm-none">XS</div>
-<div class="text-white d-none d-sm-block d-md-none">SM</div>
-<div class="text-white d-none d-md-block d-lg-none">MD</div>
-<div class="text-white d-none d-lg-block d-xl-none">LG</div>
-<div class="text-white d-none d-xl-block">XL</div>
+<div class="text-white bg-dark d-block d-sm-none fixed-bottom" style=>XS</div>
+<div class="text-white bg-dark d-none d-sm-block d-md-none fixed-bottom">SM</div>
+<div class="text-white bg-dark d-none d-md-block d-lg-none fixed-bottom">MD</div>
+<div class="text-white bg-dark d-none d-lg-block d-xl-none fixed-bottom">LG</div>
+<div class="text-white bg-dark d-none d-xl-block fixed-bottom">XL</div>
