--- a/_includes/nav/megamenu.html
+++ b/_includes/nav/megamenu.html
@@ -1,5 +1,5 @@
 <!-- MegaMenu modified from https://bootstrapious.com/p/bootstrap-mega-menu -->
-<nav class="navbar fixed-top navbar-expand navbar-light bg-white py-3 shadow-sm d-flex">
+<nav class="navbar fixed-top navbar-expand navbar-light bg-white py-3 shadow-sm d-flex d-lg-none">
   <button type="button" id="megamneu" data-toggle="dropdown" aria-expanded="false" class=""><span class="navbar-toggler-icon"></span></button><a href="#" data-toggle="dropdown" class="navbar-brand ml-2"><span class="d-inline d-sm-none">{{ page.title_short }}</span><span class="d-sm-inline d-none">{{ page.title }}</span></a>
   <div id="navbarContent" class="collapse navbar-collapse d-flex justify-content-end">
     <ul class="navbar-nav">
@@ -106,3 +106,6 @@
     </ul>
   </div>
 </nav>
+
+
+
