--- a/_includes/apply-now.html
+++ b/_includes/apply-now.html
@@ -1,7 +1,7 @@
 <div class="container-fluid bg-white p-0">
   <div class="container-fluid text-dark pt-4 pb-4" style="background: rgba(220, 53, 69, 0.3);">
     <div class="text-center w-100">
-      <p class="lead m-0 font-weight-bold">Applications are due March 2, 2020.</p>
+      <p class="lead m-0 font-weight-bold">Applications are due {{ site.data.apply-2020.due-date | date: "%A, %B %e, %Y" }}.</p>
       <p class="my-2"><a href="http://bit.ly/apply-to-dhri" target="_blank" class="btn btn-danger">Apply now</a></p>
       <p class="m-0"><small class="text-muted">Questions? <a href="/apply-2020/" class="text-muted"><u>This page</u></a> contains many answers.</small></p>
       <p class="m-0"><small class="text-muted">If you can't find an answer, reach out to <a class="text-muted" href="mailto:info@dhinstitutes.org">info@dhinstitutes.org</a class="text-muted">.</small></p>
