--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -42,7 +42,10 @@
 </footer>
 
 {% include footer/_scripts.html %}
-{% include dev/_development-scripts.html %}<!-- todo: remove on production -->
+
+{% comment %}
+{% include dev/_development-scripts.html %}
+{% endcomment %}
 
 </body>
 </html>
