--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,7 +26,7 @@
     <!-- Icon -->
     {% include header/icons.html %}
 
+    <!-- Scripts to run in header -->
     {% include header/scripts.html %}
   </head>
   <body>
-    {% include dev/_breakpoints.html %}
