--- a/_includes/people/_card.html
+++ b/_includes/people/_card.html
@@ -1,4 +1,4 @@
-<div class="col-12 col-sm-6 col-xl-4">
+<div class="col-12 col-sm-6 col-xl-4" id="{{ person.short }}">
   <div class="card mb-3">
     <img src="{{ site.data.people.settings.image-directory }}{{ person.img }}" class="card-img-top" alt="Picture of {{ person.first-name }} {{ person.last-name }}">
     <div class="card-body">
