--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -3,21 +3,37 @@
   font-weight: 300;
 }
 
+small {
+  font-weight: 300 !important;
+}
+
+
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Titillium Web', serif;
   font-weight: 400;
 }
 
+.fw-300 {
+  font-weight: 300 !important;
+}
 
+.nav-link-header {
+  font-weight: 600;
+}
 
 .nav-link.active {
   background-color: $dark-blue !important;
   color: #fff !important;
 }
 
+.nav-link:focus, .nav-link.active:focus {
+  color: #fff !important;
+}
+
 a.nav-link.active {
   color: #fff !important;
 }
+
 
 a.nav-link {
   color: $dark-blue !important;
@@ -35,10 +51,6 @@ a.nav-link:hover {
 
 .apply-button:hover {
   color: #fff !important;
-}
-
-.nav-link-header {
-  font-weight: 600;
 }
 
 .no-underline {
@@ -66,7 +78,6 @@ a.nav-link:hover {
 
 body {
   background-color: $dark-blue !important;
-  min-height: 2000px;
 
   &::before {
   display: block;
@@ -89,10 +100,20 @@ body {
   @extend .py-3;
 }
 
+
+.bg-pattern {
+  background-image: url('/assets/images/bg-pattern.png');
+}
+
+.bg-light-blue {
+  background-color: rgba(168, 192, 236, 0.2);
+}
+
 .jumbotron {
   background-color: rgba(168, 192, 236, 0.2);
   background-image: url('/assets/images/bg-pattern.png');
   padding: 1.5rem 1.5rem;
+  border-radius: 0 !important;
 }
 
 .bg-dark-blue {
@@ -167,6 +188,10 @@ display: none;
 
 #jumbotron-reports {
   background-image: url('/assets/images/2018-dhri/photo-by-lisa-m-rhody/stickers.png');
+}
+
+#jumbotron-network {
+  background-image: url('/assets/logos/png/02.png');
 }
 
 #about-bg {
@@ -252,3 +277,82 @@ display: none;
 
 
 
+
+
+
+#quoteCaret {
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-image: url('/assets/images/grey-caret-right.svg');
+  background-position: center;
+  min-height: 400px;
+}
+
+#quoteCaret:hover {
+  cursor: pointer;
+}
+
+.quote-header {
+  @extend .quote;
+  @extend .text-center;
+  @extend .pb-3;
+  // @extend .text-light;
+  color: rgba(0,0,0,0.3) !important;
+  max-width: 200px;
+  font-variant: small-caps;
+  font-size: 1.2rem !important;
+}
+
+
+
+
+
+
+.profile-card {
+  width: 80%;
+  padding-top: 100px;
+  margin: 120px auto 50px;
+  background-color: rgba(39, 49, 66, 0.7);
+  color: white;
+  box-shadow: 0 2px 6px -2px rgba(0, 0, 0, 0.26);
+}
+.profile-pic {
+  /* display: false; */
+  position: absolute;
+  /* margin: false; */
+  top: -90px;
+  left: 50%;
+  /* right: false; */
+  /* bottom: false; */
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  height: 180px;
+  width: 180px;
+  border: 10px solid #fff;
+  border-radius: 100%;
+  background-size: cover !important;
+}
+.profile-name-container {
+  margin: 0 auto 10px;
+  /* padding: 10px; */
+  text-align: center;
+}
+.user-name {
+  font-family: 'Titillium Web', serif;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 30px;
+  /* margin-bottom: 12px; */
+}
+.profile-desc-container {
+  margin: 0 auto 10px;
+  /* padding: 10px; */
+}
+.user-desc {
+  font-family: 'Titillium Web', serif;
+  font-weight: 400 !important;
+  color: rgba(255, 255, 255, 0.75);
+}
+.user-desc a {
+  font-weight: 400 !important;
+}
