--- a/_includes/nav/megamenu.html
+++ b/_includes/nav/megamenu.html
@@ -126,7 +126,7 @@
 
 {% if page.is_front %}
 {% else %}
-<div class="nav-scroller bg-white shadow-sm d-none d-sm-block">
+<div class="nav-scroller bg-white shadow-sm d-block">
   <div class="container">
     <nav class="nav nav-underline">
       <p class="navbar-text">
