--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -175,19 +175,19 @@ display: none;
 }
 
 #jumbotron-apply-2020 {
-  background-image: url('/assets/images/2018-dhri/photo-by-kalle-westerling/introduction-lisa-m-rhody-2.png');
+  background-image: url('/assets/images/2018-dhri/photo-by-kalle-westerling-jpg/introduction-lisa-m-rhody-2.jpg');
 }
 
 #jumbotron-home {
-  background-image: url('/assets/images/2018-dhri/photo-by-kalle-westerling/introduction-matthew-k-gold.png');
+  background-image: url('/assets/images/2018-dhri/photo-by-kalle-westerling-jpg/introduction-matthew-k-gold.jpg');
 }
 
 #jumbotron-collaboration {
-  background-image: url('/assets/images/2018-dhri/photo-by-kalle-westerling/collaboration-2.png');
+  background-image: url('/assets/images/2018-dhri/photo-by-kalle-westerling-jpg/collaboration-2.jpg');
 }
 
 #jumbotron-reports {
-  background-image: url('/assets/images/2018-dhri/photo-by-lisa-m-rhody/stickers.png');
+  background-image: url('/assets/images/2018-dhri/photo-by-lisa-m-rhody-jpg/stickers.jpg');
 }
 
 #jumbotron-network {
@@ -195,7 +195,7 @@ display: none;
 }
 
 #about-bg {
-  background-image: url('/assets/images/2018-dhri/photo-by-kalle-westerling/intro.png');
+  background-image: url('/assets/images/2018-dhri/photo-by-kalle-westerling-jpg/intro.jpg');
 }
 
 .flexible-background-image {
