--- a/_includes/footer/_scripts.html
+++ b/_includes/footer/_scripts.html
@@ -3,3 +3,4 @@
 <script src="{{'/assets/vendor/popper.min.js' | prepend: site.baseurl}}"></script>
 <script src="{{'/assets/vendor/bootstrap.min.js' | prepend: site.baseurl}}"></script>
 <script src="/assets/js/custom-jquery.js"></script>
+<script src="/assets/js/jquery.ajaxchimp.js"></script>
