--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,6 +21,10 @@
 
     <title>{{ page.title }}</title>
 
+    {% if page.redirect %}
+    <meta http-equiv="Refresh" content="3; url={{ page.redirect }}" />
+    {% endif %}
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no">
