--- a/_includes/nav/megamenu.html
+++ b/_includes/nav/megamenu.html
@@ -1,5 +1,5 @@
 <!-- MegaMenu modified from https://bootstrapious.com/p/bootstrap-mega-menu -->
-<nav class="navbar fixed-top navbar-expand navbar-dark bg-dark-blue py-3 shadow-sm d-flex"><!-- d-lg-none -->
+<nav class="navbar fixed-top navbar-expand navbar-dark bg-dark-blue shadow-sm d-flex py-0 py-sm-3"><!-- d-lg-none -->
   <div class="container">
 
     <a class="navbar-brand ml-2" id="megamneu" data-toggle="dropdown" aria-expanded="false" style="cursor: pointer;">
@@ -7,7 +7,8 @@
     </a>
 
     <div id="navbarContent" class="collapse navbar-collapse d-flex justify-content-end">
-      {% if page.application-page %}{% else %}<a href="/apply/" class="btn btn-outline-danger mx-3 my-2 my-sm-0 apply-button">Apply now</a>{% endif %}
+      {% if page.application-page %}{% else %}<a href="/apply/" class="d-none d-sm-block btn btn-outline-danger mx-3 my-2 my-sm-0 apply-button">Apply now</a>{% endif %}
+      {% if page.application-page %}{% else %}<a href="/apply/" class="d-block d-sm-none btn btn-outline-danger mx-3 my-2 my-sm-0 apply-button">Apply</a>{% endif %}
       <button type="button" id="megamneu" data-toggle="dropdown" aria-expanded="false" class="btn btn-semi-light">
         <span class="navbar-toggler-icon"></span>
       </button>
