--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,44 +1,29 @@
 <footer id="logo-adjustment" class="bg-white pt-5 pb-2">
-  <div class="container">
 
-    <!-- NEH logo -->
-    <div class="row logo-row justify-content-xs-left justify-content-sm-center">
-      <div class="col-xs-12 col-sm-10 col-md-6">
-        <div class="row">
-          <div class="col-12">
-              <a href="http://www.neh.gov/" target="_blank"><img src="/assets/images/logos/{{ 'neh.png' }}" class="img-fluid" /></a>
+  <div class="d-flex flex-column">
+      <div class="d-flex flex-column flex-sm-row justify-content-center align-items-sm-end text-center order-last order-sm-first">
+          <div class="px-0 px-sm-4 py-3 py-sm-0">
+              <a href="http://www.neh.gov/" target="_blank"><img src="//static.dhinstitutes.org/curriculum/website/images/logos/neh.png" class="img-fluid" style="max-height: 100px !important;"></a>
           </div>
-        </div>
+          <div class="px-5 px-sm-4 py-3 py-sm-0">
+              <a href="https://gcdi.commons.gc.cuny.edu/" target="_blank"><img src="//static.dhinstitutes.org/curriculum/website/images/logos/gcdi.png" class="img-fluid" style="max-height:100px !important;"></a>
+          </div>
+          <div class="px-0 px-sm-4 py-3 py-sm-0">
+              <a href="http://www.cuny.edu/" target="_blank"><img src="//static.dhinstitutes.org/curriculum/website/images/logos/cuny.png" class="img-fluid" style="max-height:100px !important;"></a>
+          </div>
+          <div class="px-0 px-sm-4 py-3 py-sm-0">
+              <a href="http://www.gc.cuny.edu/" target="_blank"><img src="//static.dhinstitutes.org/curriculum/website/images/logos/gc.png" class="img-fluid" style="max-height:200px !important;"></a>
+          </div>
       </div>
-    </div>
 
-    <!-- CUNY logos -->
-    <div class="row justify-content-around logo-row justify-content-xs-left justify-content-sm-center">
-      <div class="col-xs-12 col-sm-10 col-md-5">
-        <div class="row align-items-end">
-            <div class="col-4">
-                <a href="http://www.gc.cuny.edu/" target="_blank"><img src="/assets/images/logos/{{ 'gc.png' }}" class="img-fluid" /></a>
-            </div>
-            <div class="col-7">
-              <div class="row mb-5">
-                  <div class="col-12"><a href="https://gcdi.commons.gc.cuny.edu/" target="_blank"><img src="/assets/images/logos/{{ 'gcdi.png' }}" class="img-fluid" /></a></div>
-              </div>
-              <div class="row">
-                  <div class="col-12"><a href="http://www.cuny.edu/" target="_blank"><img src="/assets/images/logos/{{ 'cuny.png' }}" class="img-fluid" /></a></div>
-              </div>
-            </div>
-        </div>
+      <!-- NEH language -->
+      <div class="d-flex flex-row pt-3 px-4 order-first order-sm-last justify-content-center">
+          <div class="funding-text">
+              <p>The Digital Humanities Research Institute is funded through a generous grant from the National Endowment for the Humanities and with support from The Graduate Center's Provost's Office.</p>
+          </div>
       </div>
-    </div>
-
-    <!-- NEH language -->
-    <div class="row justify-content-around logo-row justify-content-xs-left justify-content-sm-center">
-      <div class="col-12 col-sm-10 col-md-8 col-lg-8 col-xl-8 text-dark">
-        <p><small>The Digital Humanities Research Institute is funded through a generous grant from the National Endowment for the Humanities and with support from The Graduate Center's Provost's Office.</small></p>
-      </div>
-    </div>
-
   </div>
+
 </footer>
 
 {% include footer/_scripts.html %}
