Resolves a bulletpoint in https://github.com/DHRI-Curriculum/django-app/issues/475

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -73,7 +73,7 @@ if (search_query) {
       if(options_media.indexOf(term) !== -1) { var sdata = {"page": "About > Media", "link": "/about/media/"} }
       if(options_contact.indexOf(term) !== -1) { var sdata = {"page": "About > Contact", "link": "/about/contact/"} }
       if(options_past_schedule.indexOf(term) !== -1) { var sdata = {"page": "Past Schedule", "link": "/graduate-center/schedule/"} }
-      if(options_curricula.indexOf(term) !== -1) { var sdata = {"page": "Curricula", "link": "/curricula/"} }
+      if(options_curricula.indexOf(term) !== -1) { var sdata = {"page": "Curricula", "link": "https://curriculum.dhinstitutes.org/"} }
       if(options_people.indexOf(term) !== -1) { var sdata = {"page": "People", "link": "/people/"} }
       if(options_leadership.indexOf(term) !== -1) { var sdata = {"page": "People > Leadership", "link": "/people/leadership/"} }
       if(options_faculty_fellows.indexOf(term) !== -1) { var sdata = {"page": "People > Faculty &amp; Fellows", "link": "/people/faculty-fellows/"} }
